<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/AppTheme.Toolbar"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/editFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/from"
                android:inputType="textEmailAddress"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="17sp" />

            <include layout="@layout/divider" />

            <EditText
                android:id="@+id/editTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to"
                android:inputType="textEmailAddress"
                android:paddingEnd="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingStart="10dp"
                android:textSize="17sp" />

            <include layout="@layout/divider" />

            <EditText
                android:id="@+id/editSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:inputType="textEmailSubject"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="17sp" />

            <include layout="@layout/divider" />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:maxLines="30"
                android:minLines="10"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:scrollHorizontally="false"
                android:textColor="@color/text_dark"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
